# photoorganiser

./: README.md  pyproject.toml
photoorganiser/: __main__.py  consts.py  file_copier.py  file_model.py  filecopier.py  format_list.py  progress_dialog.py  settings.py
