[tool.poetry]
name = "photoorganiser"
version = "0.1.0"
description = ""
authors = ["JazzyCamel"]

[tool.poetry.dependencies]
python = "^3.8"
PyQt5 = "^5.15.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
