[tool.poetry]
name = "photoorganiser"
version = "0.1.0"
description = ""
authors = ["JazzyCamel"]

[tool.poetry.dependencies]
python = "^3.8"
PyQt5 = "^5.15.2"
Pillow = "^8.1.0"
ExifRead = "^2.3.2"
recordtype = "^1.3"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
icecream = "^2.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
